--- a/index.html
+++ b/index.html
@@ -1,2 +1,15 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Funroom Web Application</title>
+    <link rel="stylesheet" type="text/css" href="assets/css/all.css">
+</head>
+
+<body>
+
+</body>
+
 </html>
